--- a/css/styleSobremi.css
+++ b/css/styleSobremi.css
@@ -1,14 +1,13 @@
 body{
     background-color: aqua;
 }
-section{
-    width: 70%;
-    float: right;
-}
 p{
     color: black;
     font-size: 100%;
 }
 h2{
     color: red;
+}
+section{
+    text-align: center;
 }
