--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 body{
     background-color:aqua;
+    border-width: 2px;
+    border-style: none;
+    padding: 10px;
+
 }
 header{
     background-color:blue;
@@ -15,6 +19,9 @@ nav{
     width: 50%;
     text-align: center;
 
+}
+section{
+    padding: 20px;
 }
 
 h1.titulo{
