--- a/css/styleSobremi.css
+++ b/css/styleSobremi.css
@@ -1,15 +1,13 @@
 body{
     background-color: aqua;
 }
-p{
+div{
     color: black;
     font-size: 100%;
     font-family:  "Kristen ITC";
     font-weight: bold;
-}
-h2{
-    color: red;
-}
-section{
     text-align: center;
+}
+#div__h2{
+    color: red;
 }
