--- a/modulos/css/style.css
+++ b/modulos/css/style.css
@@ -47,16 +47,7 @@ header{
     background-color: #219ebc;
 }
 /*  */
-.nav__contacto{
-    /*background: #2BA4BD none repeat scroll 0 0;*/
-    text-align: center; 
-    /*border: 1px solid #aaa;*/ 
-    font-size: 95%;    
-    margin-bottom: 1em;    
-    padding: 20px;    
-    width: auto;
-    display: block;
-}
+
 section{
     padding: 20px;
 }
@@ -77,10 +68,7 @@ p{
     font-weight: bolder;
     float: left;
 }
-.p__autor{
-    font-family: cursive;
-    text-align: center;
-}
+
 .nav_table{
     border-collapse:separate;
     border-spacing: 10px 10px;
@@ -117,12 +105,7 @@ tr{
 .middle{
     vertical-align: middle;
 }
-footer{
-    text-align: center;
-    background-color:#000;
-    color: white;
-    border-radius: 10px;
-}
+
 /*hover: cuando el cursor pasa sobre el*/
 a:hover{
     color:#006400;
@@ -158,7 +141,29 @@ caption{
     width: 100%;
     border-radius: 5px;
 }
-
+/*********************************************
+                Pie de pagina
+***********************************************/
+footer{
+    text-align: center;
+    background-color:#000;
+    color: white;
+    border-radius: 10px;
+}
+.nav__contacto{
+    /*background: #2BA4BD none repeat scroll 0 0;*/
+    text-align: center; 
+    /*border: 1px solid #aaa;*/ 
+    font-size: 95%;    
+    margin-bottom: 1em;    
+    padding: 20px;    
+    width: auto;
+    display: block;
+}
+.p__autor{
+    font-family: cursive;
+    text-align: center;
+}
 /*********** Elemenos resposivos ************/
 @media(max-width:600px){
     
